# miladymaxxer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  package.json  playwright.config.ts  pnpm-lock.yaml  popup.html  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: feature-backlog.md
milady/: build_training_dataset.py  check_pfp_url.py  cli.py  compare_runs.py  download_avatar_catalog.py  download_derivative_samples.py  export_classifier_onnx.py  export_compare_errors.py  ingest_avatar_exports.py  label_heuristic_matches.py  mobilenet_common.py  pipeline_common.py  review_avatars.py  score_avatar_catalog.py  train_classifier.py
public/: manifest.json
public/models/: milady-mobilenetv3-small.onnx
scripts/: attach-debug-chrome.mjs  build_prototype_model.py  build_training_dataset.py  check_pfp_url.py  debug-extension.mjs  download-images-aria2.sh  download-images.ts  download_avatar_catalog.py  download_derivative_samples.py  export_classifier_onnx.py  generate-hashes.ts  ingest_avatar_exports.py  label_heuristic_matches.py  launch-debug-chrome.mjs  review_avatars.py  score_avatar_catalog.py  train_classifier.py
src/: background.ts  content.ts  detection.ts  effects.ts  popup.ts  popup.tsx  selectors.ts  sounds.ts  styles.ts  worker.ts
src/shared/: browser-image.ts  constants.ts  image-core.ts  levels.ts  lru-cache.ts  node-image.ts  parse-count.ts  runtime-image-types.ts  storage.ts  types.ts
tests/: image.test.ts  levels.test.ts  lru-cache.test.ts  parse-count.test.ts  storage.test.ts
tests/e2e/: fixtures.ts  (+2 more)
